argocd/tenants/demo/demo-app/base/demo-istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtualservice
spec:
  gateways:
    - default/demo-app-gateway
  hosts:
    - demo.app.lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: default.demo-app.svc.cluster.local
            port:
              number: 8080
          weight: 100
